Strengthen warning message on title change page

--- a/app/views/new/title.html
+++ b/app/views/new/title.html
@@ -13,7 +13,15 @@
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <p>You can customise your course title but any changes will be subject to approval by the Becoming a Teacher team.</p>
+      <div class="notice add-double-bottom-margin">
+        <i class="icon icon-important">
+          <span class="visually-hidden">Warning</span>
+        </i>
+        <strong class="bold-small">
+          All course title changes are subject to approval by the Becoming a Teacher team
+        </strong>
+      </div>
+      <!-- <p>You can customise your course title but any changes will be subject to approval by the Becoming a Teacher team.</p> -->
 
       <form action="/new/{{ code }}/confirm" method="post">
         {{ macros.textbox(code + '-new-title', 'Title', '', 'form-control-full', false, false, data[code + '-new-title'] or data[code + '-new-generated-title']) }}
