Add specific requirements documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">December 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/specific-requirements">UCAS: Specific course requirements</a>
+      </h3>
+      <p>
+        Documentation on minimum qualifications settings in UCAS web-link and apply
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/new-course-locations">New course wizard: Training locations</a>
       </h3>
       <p>
