--- a/app/views/history/specific-requirements/index.html
+++ b/app/views/history/specific-requirements/index.html
@@ -19,7 +19,7 @@
 
       <h2 class="heading-large">Options</h2>
 
-      <p>Depending on the qualification selected in the Education section of apply and the course selected in the Choices section (and that course’s specific course requirements), applicants will get different warnings in the ‘Check form’ </p>
+      <p>Depending on the qualification selected in the Education section of apply and the course selected in the Choices section (and that course’s specific course requirements), applicants will get different warnings in the ‘Check form’ section:</p>
 
       <table class="table">
         <thead>
