--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">December 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/publish-states">Rethinking the publish workflow</a>
+      </h3>
+      <p>
+        What does the publish workflow look like after UCAS transition?
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/specific-requirements">UCAS: Specific course requirements</a>
       </h3>
       <p>
