Document minimum course requirements design

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -24,6 +24,13 @@
       </p>
 
       <h3 class="heading-small">
+        <a href="/history/minimum-course-requirements">New course wizard: Minimum course requirements</a>
+      </h3>
+      <p>
+        Choose the minimum course requirements from the new course wizard
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/specific-requirements">UCAS: Specific course requirements</a>
       </h3>
       <p>
