--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -28,7 +28,7 @@
         <p>Applicants need a minimum of GCSE grade C (or 4), or an equivalent in:</p>
 
         {% set moreText %}
-          <p>Accept applications from candidates:</p>
+          <p>You will accept applications from candidates:</p>
           <ul class="list list-bullet">
             <!-- <li>with the qualification</li> -->
             <li>who expect to have the qualification when the course begins</li>
