Begin documenting title change screen

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -24,6 +24,13 @@
       </p>
 
       <h3 class="heading-small">
+        <a href="/history/edit-title">New course wizard: Confirming course title</a>
+      </h3>
+      <p>
+        Moving the course title fields into the wizard
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/minimum-course-requirements">New course wizard: Minimum course requirements</a>
       </h3>
       <p>
