--- a/app/views/new/title.html
+++ b/app/views/new/title.html
@@ -49,7 +49,7 @@
           </ul>
         {% endset %}
 
-        {{ macros.radioGroup(code + '-new-min-requirements', [
+        {{ macros.radioGroup(code + '-new-change-title', [
           {
             name: 'Yes, that’s correct'
           },
