Tweak example states table

--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -115,7 +115,7 @@
           10 August
         </td>
         <td>
-          Opens on<br />6 October
+          Open on<br />6 October
         </td>
         <td>
           Yes (<a href="#">Edit</a>)
@@ -156,7 +156,7 @@
           Closed
         </td>
         <td>
-          No (<a href="#">Edit</a>)
+          No
         </td>
       </tr>
       <tr>
