Tweak dates for states

--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -16,7 +16,7 @@
     <div class="column-two-thirds">
       <p>Publishing before transition was complicated. Each training location had a state and a publish flag, which determines if the course appears in Find and can be applied to on UCAS Apply. Then the content has its own state – Empty, Draft or Published.</p>
 
-      <p>You could write and publish content for new courses on Publish, they’d be labelled green, but they would not appear online if the user hadn’t set their training locations to running in UCAS (or if UCAS hadn’t approved this by <a href="  /history/course-not-running-oct-15">setting the publish flag to yes</a>).</p>
+      <p>You could write and publish content for new courses on Publish, they’d be labelled green, but they would not appear online if the user hadn’t set their training locations to running in UCAS (or if UCAS hadn’t approved this by <a href="/history/course-not-running-oct-15">setting the publish flag to yes</a>).</p>
     </div>
   </div>
 
@@ -26,7 +26,7 @@
       <tr>
         <th class="subject-col">Course</th>
         <th class="status-col" style="width: 120px">Status</th>
-        <th class="published-col">Published</th>
+        <th class="published-col">Last published</th>
         <th class="applications-col">Applications</th>
         <th class="type-col">Vacancies?</th>
       </tr>
@@ -74,7 +74,7 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft #2</span>
         </td>
         <td>
-          10 August
+          10 August 2018
         </td>
         <td>
           Open
@@ -93,7 +93,7 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td>
-          10 August
+          10 August 2018
         </td>
         <td>
           Open
@@ -112,10 +112,10 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td>
-          10 August
+          10 August 2018
         </td>
         <td>
-          Open on<br />6 October
+          Open on<br />6 October 2018
         </td>
         <td>
           Yes (<a href="#">Edit</a>)
@@ -131,7 +131,7 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td>
-          10 August
+          10 August 2018
         </td>
         <td>
           Closed
@@ -150,7 +150,7 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
         </td>
         <td>
-          10 August
+          Withdrawn on<br />10 August 2018
         </td>
         <td>
           Closed
