Open from, not open on

--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -115,7 +115,7 @@
           10 August 2018
         </td>
         <td>
-          Open on<br />6 October 2018
+          Open from<br />6 October 2018
         </td>
         <td>
           Yes (<a href="#">Edit</a>)
