Tweak specific requirements

--- a/app/views/history/minimum-course-requirements/index.html
+++ b/app/views/history/minimum-course-requirements/index.html
@@ -28,6 +28,14 @@
         <li>applying defaults based on legal minimums</li>
         <li>what happens when you hit ‘change’</li>
       </ul>
+
+      <p>
+        <a href="https://www.gov.uk/government/publications/initial-teacher-training-criteria/initial-teacher-training-itt-criteria-and-supporting-advice#c11-gcse-standard-equivalent">Legal requirements are documented on GOV.UK</a>
+      </p>
+
+      <blockquote class="panel panel-border-wide">
+        <p>Providers should look for further evidence of a breadth of achievement in English where applicants have achieved a GCSE grade 4 or above in English literature only.</p>
+      </blockquote>
     </div>
   </div>
 
